final tweaks to gadget buttons, and improved event handling to stopobserving once the menu is hidden. Also, keep the menu visible when clicking on an item

--- a/public/stylesheets/dynamic_menu.css
+++ b/public/stylesheets/dynamic_menu.css
@@ -10,6 +10,8 @@ ul.dynamic_menu {
 }
 ul.dynamic_menu>li {
     list-style: none;
+    text-align: left;
+    padding-left: 0.5em;
 }
 ul.dynamic_menu>li:hover {
     background-color: #307af5;
